# human_detection

./: CMakeLists.txt  partitions_human_detection.csv
main/: CMakeLists.txt  idf_component.yml  main.c
